[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/OCRAEXT.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/OCRAEXT.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/user_interface/background_colors/3b3640_360x360.png" type="Texture" id=3]
[ext_resource path="res://user_interface/UsersScreen/scripts/users_screen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 82
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="UsersScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 112.0
margin_right = 320.0
margin_bottom = 196.0
rect_min_size = Vector2( 640, 84 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.286275, 0.294118, 0.301961, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Goner gunner"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -92.0
margin_right = 184.0
margin_bottom = -55.0
rect_min_size = Vector2( 384, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "fly and boom!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -312.0
margin_right = 270.0
margin_bottom = -12.0
rect_min_size = Vector2( 550, 300 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Control/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/NinePatchRect/MarginContainer"]
margin_right = 534.0
margin_bottom = 284.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/NinePatchRect/MarginContainer/ScrollContainer"]
margin_right = 534.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="CreateNewCharacter" type="Button" parent="Control/NinePatchRect/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 534.0
margin_bottom = 40.0
focus_mode = 0
size_flags_horizontal = 3
text = "Create New +"

[node name="RegisterPopup" type="Popup" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -80.0
margin_right = 156.0
margin_bottom = 80.0
rect_min_size = Vector2( 312, 160 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/RegisterPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Control/RegisterPopup/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = -80.0
margin_right = 156.0
margin_bottom = 80.0
color = Color( 0.337255, 0.337255, 0.372549, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/RegisterPopup/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/RegisterPopup/NinePatchRect/MarginContainer"]
margin_right = 296.0
margin_bottom = 144.0

[node name="LineEdit" type="LineEdit" parent="Control/RegisterPopup/NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 296.0
margin_bottom = 36.0
focus_mode = 1
custom_fonts/font = SubResource( 2 )
max_length = 20
placeholder_text = "Name 20 Chars"
caret_blink = true
caret_blink_speed = 0.5

[node name="MarginContainer" type="MarginContainer" parent="Control/RegisterPopup/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 296.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/RegisterPopup/NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 296.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreateButton" type="Button" parent="Control/RegisterPopup/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 146.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create"

[node name="CloseButton" type="Button" parent="Control/RegisterPopup/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 150.0
margin_right = 296.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Close"

[node name="SameNamePopup" type="Popup" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -125.0
margin_right = 200.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/SameNamePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/SameNamePopup/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.117647, 0.129412, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SameNamePopup/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/SameNamePopup/NinePatchRect/VBoxContainer"]
margin_right = 400.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Username taken!!!"
align = 1
valign = 1
autowrap = true

[node name="Close" type="Button" parent="Control/SameNamePopup/NinePatchRect/VBoxContainer"]
margin_top = 210.0
margin_right = 400.0
margin_bottom = 250.0
focus_mode = 0
text = "Ok, don't bite!!"

[node name="DeleteConfirmPopup" type="Popup" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -125.0
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 400, 250 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="Control/DeleteConfirmPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -125.0
margin_right = 200.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/DeleteConfirmPopup/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.117647, 0.129412, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DeleteConfirmPopup/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/DeleteConfirmPopup/NinePatchRect2/VBoxContainer"]
margin_right = 400.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/DeleteConfirmPopup/NinePatchRect2/VBoxContainer"]
margin_top = 210.0
margin_right = 400.0
margin_bottom = 250.0
size_flags_horizontal = 3

[node name="Yes" type="Button" parent="Control/DeleteConfirmPopup/NinePatchRect2/VBoxContainer/HBoxContainer"]
margin_right = 198.0
margin_bottom = 40.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Yes"

[node name="No" type="Button" parent="Control/DeleteConfirmPopup/NinePatchRect2/VBoxContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 400.0
margin_bottom = 40.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "No"

[node name="Back" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -48.0
margin_right = -8.0
margin_bottom = -8.0
focus_mode = 0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/NinePatchRect/MarginContainer/ScrollContainer/VBoxContainer/CreateNewCharacter" to="." method="_on_CreateNewCharacter_pressed"]
[connection signal="pressed" from="Control/RegisterPopup/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Control/RegisterPopup/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Control/SameNamePopup/NinePatchRect/VBoxContainer/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
